fixed some white space

--- a/css-practice/footer.css
+++ b/css-practice/footer.css
@@ -1,11 +1,9 @@
-body{
+body {
 	font-size: 12px;
 	font-family: helvetica, arial, sans-serif;
 	color:white;
 	font-weight: lighter;
 	letter-spacing: 0.1em
-
-
 }
 
 #outercontainer {
@@ -13,6 +11,7 @@ body{
 	 margin: 0;
 	 padding: 0;
  }
+
 /*.button{
 	border: 1px solid rgb(90,90, 90);
 	background: rgb(110,110,110);
@@ -37,6 +36,7 @@ body{
 	padding-top: 10px;
 	padding-left: 279px;
  }
+ 
  #rightcontainer {
 	width: 850px;
 	height: 325px;
@@ -47,33 +47,30 @@ body{
 	padding-bottom: 10px;
  }
 
- #col2{
+ #col2 {
 	width: 218px;
 	height: 325px;
 	float: left;
 	padding: 15px 63px 0px 35px;
 	padding-right: 106px;
+}
 
- }
-
- #col3{
+ #col3 {
 	width: 225px;
 	height: 325px;
 	float: left;
 	padding-right: 224px;
  }
 
- #leftlist{
+ #leftlist {
  	float: left; 
  }
 
-  #rightlist{
+  #rightlist {
  	float: left; 
  }
 
- 
-
- .button{
+ .button {
 	background: rgb(99,99,99);
 	width: 140px;
 	padding: 10px 0;
@@ -83,23 +80,22 @@ body{
 	border-top-color: rgb(82, 73, 73);
 	letter-spacing: 0.15em;
 	box-shadow: inset 0px 2px 0px rgb(133, 133, 133);
+}
 
- }
-
-#howitworks{
-background: linear-gradient(to bottom, rgb(250,214,1) 2%,rgb(245,209,0) 45%,rgb(245,190,1) 66%,rgb(245,168,4) 100%);
-width: 218px;
-text-align: center;
-padding: 17px 0px;
-border-radius: 6px;
-font-size: 16px;
-margin: 22px 0px 25px 0px;
-letter-spacing: 0.15em;
-text-shadow: 0px 2px 1px rgb(107, 79, 8);
+#howitworks {
+	background: linear-gradient(to bottom, rgb(250,214,1) 2%,rgb(245,209,0) 45%,rgb(245,190,1) 66%,rgb(245,168,4) 100%);
+	width: 218px;
+	text-align: center;
+	padding: 17px 0px;
+	border-radius: 6px;
+	font-size: 16px;
+	margin: 22px 0px 25px 0px;
+	letter-spacing: 0.15em;
+	text-shadow: 0px 2px 1px rgb(107, 79, 8);
 }
 
 
-.title{
+.title {
 	text-align: left;
 	letter-spacing: 0.15em;
 	color: white;
@@ -108,7 +104,7 @@ text-shadow: 0px 2px 1px rgb(107, 79, 8);
 	text-shadow: 0px 2px 1px rgb(48, 48, 48);
 }
 
-#email{
+#email {
 	width: 152px;
 	letter-spacing: 0.15em;
 	padding: 16px 15px;
@@ -123,10 +119,9 @@ text-shadow: 0px 2px 1px rgb(107, 79, 8);
 	margin: 7px 0px 15px 0px;
 	border: 1px solid rgb(73, 73, 73);
 	box-shadow: inset 0px 2px 8px rgb(116, 116, 116);
-
 }
 
-#check{
+#check {
 	width: 25px;
 	padding: 20px 12px 12px 4px;
 	background-color: rgb(151,151,151);
@@ -143,33 +138,30 @@ text-shadow: 0px 2px 1px rgb(107, 79, 8);
 	border-left: none;
 }
 
-#fb{
+#fb {
 	clear: left;
 	text-shadow: 0px 1px 2px black;
-
 }
 
 ul, menu, dir {
-display: block;
-list-style-type: disc;
--webkit-margin-before: 0px;
--webkit-margin-after: 0px;
--webkit-margin-start: 0px;
--webkit-margin-end: 0px;
--webkit-padding-start: 0px;
+	display: block;
+	list-style-type: disc;
+	-webkit-margin-before: 0px;
+	-webkit-margin-after: 0px;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
+	-webkit-padding-start: 0px;
 }
 
-li{
+li {
 	margin: 10px 20px 10px 0px;
 	/*box-shadow: 1px 1px 1px black;*/
 	list-style-type: none;
 	text-shadow: 0px 1px 2px black;
 	font-size: 13px;
 }
- 
-}
 
-#emailgray{
+#emailgray {
 	background: rgb(99,99,99);
 	width: 140px;
 	padding: 10px 0px;
@@ -178,50 +170,47 @@ li{
 	border: solid 1px rgb(67, 67, 67);
 	border-top-color: rgb(82, 73, 73);
 	box-shadow: inset 0px 2px 0px rgb(133, 133, 133);
-
 }
 
-#mobcats{
+#mobcats {
 	margin-bottom: 5px;
 	letter-spacing: 0.15em;
 	font-size: 1.3em;
 	text-shadow: 0px 2px 1px rgb(48, 48, 48)
 }
 
-p{
+p {
 	text-shadow: 0px 1px 2px black;
 	font-size: 13px;
-
 }
 
-.social{
+.social {
 	height: 15px;
 }
 
-.close{
+.close {
 	line-height: .1;
 }
 
-.words{
+.words {
 	font-size: 10px;
 }
 
-.uline{
+.uline {
 	border-bottom: 1px solid rgb(48, 48, 48);
 }
 
-.uline p{
+.uline p {
 	-webkit-margin-before: 8px;
 	-webkit-margin-after: 8px;
-
 }
 
-.upline{
+.upline {
 	border-top: 1px solid rgb(48, 48, 48);
 	margin-top: 12px;
 }
-.upline p{
+
+.upline  p{
 	-webkit-margin-before: 8px;
 	-webkit-margin-after: 8px;
-
 }
